--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Speker</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project1</title>
 </head>
 <body>
-  <h1>
-    O`zbekiston Tarixi 1 - mavzu
-  </h1>
-  <audio src="sour"></audio>
+    <audio controls>
+        <source src="source1.mp3" type="audio/mpeg">
+        Brauzeringiz audio fayllarni oynata olmaydi.
+   
+    </audio>
+    <audio controls>
+        <source src="source2.mp3" type="audio/mpeg">  
+        Brauzeringiz audio fayllarni oynata olmaydi.
+
+    </audio>
 </body>
 </html>
